[package]
name = "space_mission_log_analysis"
version = "0.1.0"
edition = "2024"

# We use Rayon for parallelization
[dependencies]
rayon = "1.7"
log = "0.4"
env_logger = "0.11"  # For simple logging initialization
clap = { version = "4.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"